# msds_hpc

assignments/: assignment_02.md  assignment_04.sh  assignment_05.out  assignment_05.sbatch  assignment_05.txt  lab_01.yaml
assignments/assignment_05/: CMakeLists.txt  make.sh  profile.cpp
assignments/lab_03/: CMakeCache.txt  Makefile  README.MD
project/: proposal.md
